fix: align button with message

--- a/styles/linter-ui.less
+++ b/styles/linter-ui.less
@@ -23,6 +23,11 @@
     color: #fff - @inset-panel-background-color; // invert;
     background: @app-background-color;
 
+    // align button with message
+    .linter-buttons {
+      float: left;
+    }
+
     a {
       color: @text-color;
     }
